--- a/lscommands/assets/style/main.css
+++ b/lscommands/assets/style/main.css
@@ -14,15 +14,15 @@ html,body{
     margin-right: 0px;
     margin-left: auto;
     margin-top: 0px;
-    width: 30px; 
-    height: 20px;
 }
 
 .searchbar {
     display: flex;
     margin:0px;
-    height:100%;
-    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .s {
