--- a/lscommands/assets/style/main.css
+++ b/lscommands/assets/style/main.css
@@ -18,7 +18,6 @@ html,body{
 
 .searchbar {
     display: flex;
-    margin:0px;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
@@ -46,6 +45,9 @@ html,body{
 
 #consola {
     display: none;
+    position: fixed;
+    bottom: 66px;
+    right: 26px;
 }
 
 .div {
@@ -53,4 +55,14 @@ html,body{
     margin:0px;
     height:100%;
     align-items: center;
+}
+
+.image-cmd:hover {
+    box-shadow: 2px 10px 15px -1px rgba(112,112,112,1);
+}
+
+.cmd-float {
+    position: fixed;
+    bottom: 26px;
+    right: 26px;
 }
