--- a/lscommands/assets/style/search-it.css
+++ b/lscommands/assets/style/search-it.css
@@ -1,5 +1,5 @@
 @import url(http://weloveiconfonts.com/api/?family=entypo);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
 }
@@ -93,7 +93,7 @@
   border-radius: 0;
   background: #fff;
   padding: 10px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   height: 50px;
   -webkit-transition: all 0.05s ease-in-out;
   transition: all 0.05s ease-in-out;
