--- a/lscommands/assets/style/main.css
+++ b/lscommands/assets/style/main.css
@@ -1,109 +1,15 @@
-html,body{
-    margin:0px;
-    height: 90%;
-}
-
-.titulo {
-    font-family: 'Ubuntu Mono', monospace;
-    text-align: center;
-}
-
-.table {
-    display: flex;
-    flex-direction: row-reverse;
-    margin-right: 0px;
-    margin-left: auto;
-    margin-top: 0px;
-}
-
-.select {
-    margin-top: 4px;
-    margin-right: 35px;
-    padding: 10px;
-    width: 130px;
-    font-size: 10px;
-    text-align: left;
-    font-weight: bold;
-    border-radius: 5px 5px 5px 5px;
-    height: 100%;
-    border: 0px;
-    background: #f1f1f1;
-    transition: box-shadow .3s;
-}
-
-.searchbar {
-    display: flex;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
-.search {
-    margin-top: 15px;
-    padding: 15px;
-    width: 500px;
-    font-size: 15px;
-    text-align: left;
-    font-weight: bold;
-    border-radius: 5px 5px 5px 5px;
-    height: 100%;
-    border: 0px;
-    background: #f1f1f1;
-    transition: box-shadow .3s;
-}
-
-.search:hover {
-    -webkit-box-shadow: 1px 9px 16px -1px rgba(0,0,0,0.5);
-    -moz-box-shadow: 1px 9px 16px -1px rgba(0,0,0,0.5);
-    box-shadow: 1px 9px 16px -1px rgba(0,0,0,0.5);
-}
-
-.content {
-    margin-top: 50px;
-    font-family: 'Ubuntu Mono', monospace;
-}
-
-.s {
-    margin-left: auto;
-    margin-right: auto;
-    width: 1000px;
-    border: 0px;
-}
-
-.terminal_linux {
-    display: none;
-    margin:0px;
-    height:100%;
-    align-items: center;
-}
-
-.terminal_bash {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#consola {
-    display: none;
-    position: fixed;
-    bottom: 66px;
-    right: 26px;
-}
-
-.div {
-    display: flex;
-    margin:0px;
-    height:100%;
-    align-items: center;
-}
-
-.image-cmd:hover {
-    box-shadow: 2px 10px 15px -1px rgba(112,112,112,1);
-    transition: box-shadow .3s;
-}
-
-.cmd-float {
-    position: fixed;
-    bottom: 26px;
-    right: 26px;
-}
+html,body{margin:0;height:90%}
+.titulo{font-family:'Ubuntu Mono',monospace;text-align:center}
+.table{display:flex;flex-direction:row-reverse;margin-right:0;margin-left:auto;margin-top:0}
+.select{margin-top:4px;margin-right:35px;padding:10px;width:130px;font-size:10px;text-align:left;font-weight:bold;border-radius:5px 5px 5px 5px;height:100%;border:0;background:#f1f1f1;transition:box-shadow .3s}
+.searchbar{display:flex;justify-content:center;margin-left:auto;margin-right:auto;width:50%}
+.search{margin-top:15px;padding:15px;width:500px;font-size:15px;text-align:left;font-weight:bold;border-radius:5px 5px 5px 5px;height:100%;border:0;background:#f1f1f1;transition:box-shadow .3s}
+.search:hover{-webkit-box-shadow:1px 9px 16px -1px rgba(0,0,0,0.5);-moz-box-shadow:1px 9px 16px -1px rgba(0,0,0,0.5);box-shadow:1px 9px 16px -1px rgba(0,0,0,0.5)}
+.content{margin-top:50px;font-family:'Ubuntu Mono',monospace}
+.s{margin-left:auto;margin-right:auto;width:1000px;border:0}
+.terminal_linux{display:none;margin:0;height:100%;align-items:center}
+.terminal_bash{margin-left:auto;margin-right:auto}
+#consola{display:none;position:fixed;bottom:66px;right:26px}
+.div{display:flex;margin:0;height:100%;align-items:center}
+.image-cmd:hover{box-shadow:2px 10px 15px -1px rgba(112,112,112,1);transition:box-shadow .3s}
+.cmd-float{position:fixed;bottom:26px;right:26px}
