--- a/lscommands/assets/style/search-it.css
+++ b/lscommands/assets/style/search-it.css
@@ -1,128 +1,12 @@
-@import url(http://weloveiconfonts.com/api/?family=entypo);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-}
-
-*, div {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.container {
-    display: block;
-    width: 70%;
-    margin: auto auto 0 auto;
-    background: #fff;
-    height: 100vh;
-}
-
-.bar {
-    margin-left: auto;
-    margin-right: auto;
-    width: 500px;
-}
-
-.sw {
-  float: left;
-  width: 100%;
-  height: 80px;
-  background: #2c2c32;
-  padding: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-shadow: 0 2px 0 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 2px 0 0px rgba(0, 0, 0, 0.1);
-}
-
-.sw form {
-  float: left;
-  width: 100%;
-  height: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.sw a.logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  -webkit-box-ordinal-group: 1;
-      -ms-flex-order: 0;
-          order: 0;
-  width: 100%;
-  height: 100%;
-  max-width: 80px;
-  margin-right: 10px;
-  -webkit-transition: all 0.05s ease-in-out;
-  transition: all 0.05s ease-in-out;
-  visibility: visible;
-  opacity: 1;
-}
-
-.sw a.logo svg {
-  max-width: 100%;
-  width: 100%;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.sw .search {
-     margin-left: auto;
-    margin-right: auto;
-    width: 500px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  -webkit-box-ordinal-group: 3;
-      -ms-flex-order: 2;
-          order: 2;
-  outline: none;
-  border: none;
-  border-radius: 0;
-  background: #fff;
-  padding: 10px;
-  font-family: 'Roboto', sans-serif;
-  height: 50px;
-  -webkit-transition: all 0.05s ease-in-out;
-  transition: all 0.05s ease-in-out;
-  -webkit-appearance: none;
-}
-.sw .search:focus {
-  height: 80px;
-  margin-left: -15px;
-    margin-right: -15px;
-  padding: 15px 15px;
-}
-.go {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
-  max-width: 50px;
-  display: inline-block;
-  border: none;
-  height: 50px;
-  -webkit-transition: all 0.05s ease-in-out;
-  transition: all 0.05s ease-in-out;
-  font-size: 21px;
-  outline: none;
-}
-    
-.content {
-    margin-top: 20px;
-    font-family: 'Ubuntu Mono', monospace;
-}
+@import url(http://weloveiconfonts.com/api/?family=entypo);@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');[class*="entypo-"]:before{font-family:'entypo',sans-serif}
+*,div{-webkit-box-sizing:border-box;box-sizing:border-box}
+.container{display:block;width:70%;margin:auto auto 0 auto;background:#fff;height:100vh}
+.bar{margin-left:auto;margin-right:auto;width:500px}
+.sw{float:left;width:100%;height:80px;background:#2c2c32;padding:15px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-shadow:0 2px 0 0 rgba(0,0,0,0.1);box-shadow:0 2px 0 0 rgba(0,0,0,0.1)}
+.sw form{float:left;width:100%;height:50px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
+.sw a.logo{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-flex:1;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-box-ordinal-group:1;-ms-flex-order:0;order:0;width:100%;height:100%;max-width:80px;margin-right:10px;-webkit-transition:all .05s ease-in-out;transition:all .05s ease-in-out;visibility:visible;opacity:1}
+.sw a.logo svg{max-width:100%;width:100%;margin-top:auto;margin-bottom:auto}
+.sw .search{margin-left:auto;margin-right:auto;width:500px;-webkit-box-flex:1;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-box-ordinal-group:3;-ms-flex-order:2;order:2;outline:0;border:0;border-radius:0;background:#fff;padding:10px;font-family:'Lato',sans-serif;height:50px;-webkit-transition:all .05s ease-in-out;transition:all .05s ease-in-out;-webkit-appearance:none}
+.sw .search:focus{height:80px;margin-left:-15px;margin-right:-15px;padding:15px 15px}
+.go{-webkit-box-flex:1;-ms-flex:1 1 auto;flex:1 1 auto;-webkit-box-ordinal-group:4;-ms-flex-order:3;order:3;max-width:50px;display:inline-block;border:0;height:50px;-webkit-transition:all .05s ease-in-out;transition:all .05s ease-in-out;font-size:21px;outline:0}
+.content{margin-top:20px;font-family:'Ubuntu Mono',monospace}
